# vol2atlas

./: .gitignore  .~lock.vol2atlas_strategy.pptx#  README.md  landmarks_manual.csv  methods_survey.pptx  pyproject.toml  vol2atlas_description.md  vol2atlas_method.docx  vol2atlas_method.pptx  vol2atlas_strategy.pptx
archive/scripts/: landmark_align.py  preorient.py  view_atlas.py  view_zarr.py
archive/src/zrot/: align.py
scripts/: compare_with_ccf.py  make_method_doc.py  make_method_slides.py  make_methods_slides.py  make_strategy_slides.py  prealign_for_brainreg.py  qc_compare_methods.py  qc_export.py  test_all.sh  tiff_to_ngff.py
src/vol2atlas/: cli.py  frame.py  io.py  landmark_presets.py  local_refinement.py  orientation.py  state.py  transform.py  transform_io.py
src/vol2atlas/data/ccf_landmark_presets/: default_v1.json
src/vol2atlas/steps/: align_full.py  refine_ants.py  refine_brainreg.py  refine_elastix.py  step1_prealign.py  step2_refine.py  step3_landmarks.py  step_export.py  step_mi.py
src/zrot/: __init__.py  align.py  atlas.py  cli.py  refine.py
src/zrot/steps/: refine_ants.py  refine_brainreg.py  step1_prealign.py  step2_refine.py  step3_landmarks.py  step_export.py
